# ens-shell-cli

./: meson.build
po/: POTFILES  ens-shell-cli.pot  ens-tui-shell.pot
src/: Console.vala  Format.vala  Greetings.vala  Printable.vala  meson.build
